RESOLVED FIXED279740
"inherit" as variable substitution fallback not working when setting custom property
https://bugs.webkit.org/show_bug.cgi?id=279740
Summary "inherit" as variable substitution fallback not working when setting custom p...
Jeffery To
Reported 2024-09-15 14:07:38 PDT
Created attachment 472568 [details] Test case When a custom property is set like: --color: var(--unknown, inherit); the custom property does not inherit the correct value. Steps to reproduce: 1. Open attached test case. Expected result: A 10px green border is shown. Actual result: A 10px border with the default colour is shown. Tested with: * Safari 17.6 (19618.3.11.11.5) on macOS Sonoma 14.6.1 (MacBook Pro 16-inch, M3 Max) * Safari on iOS 17.6.1 (iPhone 15) * Safari on iPadOS 17.6.1 (iPad Pro 13-inch, M4) * Epiphany 46.0 on Ubuntu 24.04 (libwebkitgtk 2.44.3) Works on Chrome and Firefox.
Attachments
Test case (539 bytes, text/html)
2024-09-15 14:07 PDT, Jeffery To
no flags
Radar WebKit Bug Importer
Comment 1 2024-09-22 14:08:23 PDT
Antti Koivisto
Comment 2 2025-07-02 09:46:58 PDT
EWS
Comment 3 2025-07-02 11:31:21 PDT
Committed 296918@main (ca01e51f3120): <https://commits.webkit.org/296918@main> Reviewed commits have been landed. Closing PR #47490 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.