"inherit" as variable substitution fallback not working when setting custom property https://bugs.webkit.org/show_bug.cgi?id=279740 rdar://136463977

Reviewed by Alan Baradlay.

Support CSS-wide keywords in var() fallbacks.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-variables/revert-in-fallback-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-variables/revert-layer-in-fallback-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-variables/variable-css-wide-keywords-expected.txt:
* Source/WebCore/css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::parseCSSWideKeyword):

Expose the parsing function.

* Source/WebCore/css/parser/CSSPropertyParser.h:
* Source/WebCore/style/StyleBuilder.cpp:
(WebCore::Style::Builder::resolveCustomPropertyValue):

Try to parse unregistered custom property value as a keyword.

Canonical link: https://commits.webkit.org/296918@main